tdf#162171 alpha mask pixels are now alpha instead of transparency

Starting with commit 81994cb2b8b32453a92bcb011830fcb884f22ff3,
alpha masks now store alpha instead of transparency values.

Change-Id: I74d7a536e0ae1aea3b462d660ae3e4b815cf89c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170968
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 4bbdb2f0718d71840a4e55cc7e9c82157422b0dd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170950
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>