vcl/qa/cppunit/graphicfilter/filters-webp-test.cxx
@@ -95,7 +95,7 @@ void WebpFilterTest::testRoundtrip(bool lossy)
         pAccess->SetFillColor(COL_BLUE);
         pAccess->FillRect(tools::Rectangle(Point(10, 10), Size(10, 10)));
         BitmapScopedWriteAccess pAccessAlpha(aAlpha);
-        pAccessAlpha->SetFillColor(BitmapColor(0)); // opaque
+        pAccessAlpha->SetFillColor(BitmapColor(COL_WHITE)); // opaque
         pAccessAlpha->FillRect(tools::Rectangle(Point(0, 0), Size(10, 10)));
         pAccessAlpha->FillRect(tools::Rectangle(Point(10, 0), Size(10, 10)));
         pAccessAlpha->FillRect(tools::Rectangle(Point(0, 10), Size(10, 10)));
@@ -144,7 +144,7 @@ void WebpFilterTest::testRoundtrip(bool lossy)
         CPPUNIT_ASSERT_EQUAL(sal_uInt8(255), pAccessAlpha->GetPixelIndex(0, 0));
         CPPUNIT_ASSERT_EQUAL(sal_uInt8(255), pAccessAlpha->GetPixelIndex(0, 19));
         CPPUNIT_ASSERT_EQUAL(sal_uInt8(255), pAccessAlpha->GetPixelIndex(19, 0));
-        CPPUNIT_ASSERT_EQUAL(sal_uInt8(191), pAccessAlpha->GetPixelIndex(19, 19));
+        CPPUNIT_ASSERT_EQUAL(sal_uInt8(64), pAccessAlpha->GetPixelIndex(19, 19));
     }
 
     aStream.Seek(STREAM_SEEK_TO_BEGIN);
